cabal-version:      3.0
name:               adventOfCode
version:            2025 

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             GuillaumedeVolpiano
maintainer:         guillaumedevolpiano@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options: -Wall

library helpers
  import:           warnings
  hs-source-dirs:   lib
  exposed-modules:
    Helpers.General
    Helpers.General.ByteString
    Helpers.General.Streamly
    Helpers.General.Text
    Helpers.Graph
    Helpers.Heap.Mutable
    Helpers.Heap.Primitive.Mutable
    Helpers.Heap.Unboxed.Mutable
    Helpers.Maths
    Helpers.Parsers
    Helpers.Parsers.ByteString
    Helpers.Parsers.FlatParse
    Helpers.Parsers.Text
    Helpers.Search
    Helpers.Search.Int
    Helpers.Streamly.Fold

  build-depends:
    , array
    , base
    , bytestring
    , containers
    , curl
    , directory
    , fgl
    , flatparse
    , graphviz
    , hashable
    , http-client           ^>=0.7.19
    , http-client-tls       ^>=0.3.6.4
    , http-types            ^>=0.12.4
    , linear
    , megaparsec
    , monad-dijkstra
    , psqueues
    , regex-tdfa
    , split
    , streamly-bytestring   ^>=0.2.3
    , streamly-core         ^>=0.3.0
    , text                  >=2.1
    , time
    , timeit
    , unordered-containers
    , utf8-string
    , vector                ^>=0.13.2.0
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2015
  main-is:          Main.hs
  hs-source-dirs:   2015
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2015
    , helpers
    , time

  ghc-options:      -fllvm -threaded -O3 "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2015
  hs-source-dirs:   2015/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  build-depends:
    , arithmoi
    , base
    , base16-bytestring
    , bytestring
    , cereal
    , containers
    , cryptohash-md5
    , flatparse
    , hashable
    , hashtables
    , helpers
    , linear
    , massiv
    , megaparsec
    , mtl
    , multiset
    , psqueues
    , streamly
    , streamly-core
    , text                  >=2.1
    , transformers
    , unordered-containers
    , utf8-string
    , vector
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2016
  main-is:          Main.hs
  hs-source-dirs:   2016
  build-depends:
    , arithmoi
    , array
    , base
    , base16-bytestring
    , binary
    , bytestring
    , cmdargs
    , containers
    , criterion
    , cryptohash-md5
    , curl
    , data-clist
    , days2016
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , infinite-list
    , linear
    , megaparsec
    , mtl
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , text-show
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector
    , wide-word

  ghc-options:      -fllvm -threaded -O3 "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2016
  hs-source-dirs:   2016/days
  exposed-modules:
    Assembunny
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    MD5

  build-depends:
    , arithmoi
    , array
    , base
    , base16-bytestring
    , binary
    , bytestring
    , cmdargs
    , containers
    , criterion
    , cryptohash-md5
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , infinite-list
    , linear
    , megaparsec
    , mtl
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , text-show
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector
    , wide-word

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2017
  main-is:          Main.hs
  hs-source-dirs:   2017 2017/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    KnotHash

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , parallel
    , parser-combinators
    , psqueues
    , regex-pcre
    , regex-tdfa
    , split
    , text
    , time
    , timeit
    , transformers
    , unordered-containers
    , vector

  ghc-options:      -threaded
  default-language: Haskell2010

executable aoc2018
  main-is:          Main.hs
  hs-source-dirs:   2018 2018/days
  other-modules:
    Computer
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , lens
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , multiset
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , utility-ht
    , vector

  ghc-options:      -O1 -threaded
  default-language: Haskell2010

executable aoc2019
  main-is:          Main.hs
  hs-source-dirs:   2019 2019/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Intcode

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , lens
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , multiset
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , vector

  ghc-options:      -O1 -threaded
  default-language: Haskell2010

executable aoc2020
  main-is:          Main.hs
  hs-source-dirs:   2020 2020/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , arithmoi
    , array
    , base
    , cmdargs
    , containers
    , criterion
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , monad-loops
    , mtl
    , parallel
    , psqueues
    , split
    , text
    , time
    , timeit
    , unordered-containers
    , vector

  ghc-options:      -threaded
  default-language: Haskell2010

executable aoc2021
  main-is:          Main.hs
  hs-source-dirs:   2021 2021/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , array
    , base
    , cmdargs
    , containers
    , curl
    , data-clist
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , linear
    , megaparsec
    , mtl
    , multiset
    , psqueues
    , regex-tdfa
    , split
    , text
    , time
    , timeit
    , unordered-containers

  default-language: Haskell2010

executable aoc2022
  main-is:          Main.hs
  hs-source-dirs:   2022 2022/days
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  --
  --    -- LANGUAGE extensions used by modules in this package.
  --    -- other-extensions:
  build-depends:
    , array
    , base
    , cmdargs
    , containers
    , curl
    , data-clist
    , directory
    , hashable
    , helpers
    , linear
    , megaparsec
    , psqueues
    , regex-tdfa
    , split
    , time
    , timeit
    , unordered-containers

  default-language: Haskell2010

library days2023
  hs-source-dirs:   2023/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Part

  build-depends:
    , arithmoi
    , array
    , base
    , bytestring
    , containers
    , effectful
    , fgl
    , flatparse
    , hashable
    , helpers
    , linear
    , massiv
    , megaparsec
    , monad-dijkstra
    , mtl
    , parallel
    , psqueues
    , regex-tdfa
    , split
    , streamly-core
    , text                  >=2.1
    , transformers
    , unordered-containers
    , utf8-string
    , vector
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2023
  main-is:          Main.hs
  hs-source-dirs:   2023
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2023
    , helpers
    , time

  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

executable aoc2024
  main-is:          Main.hs
  hs-source-dirs:   2024
  build-depends:
    , base
    , bytestring
    , cmdargs
    , containers
    , days2024
    , directory
    , helpers
    , time

  -- ghc-options: -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8"
  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -p"
  default-language: Haskell2010

library days2024
  hs-source-dirs:   2024/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  build-depends:
    , arithmoi
    , array
    , base
    , bytestring
    , containers
    , fgl
    , helpers
    , linear
    , massiv
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , parallel
    , psqueues
    , semialign
    , split
    , statistics
    , unordered-containers
    , vector
    , word8

  ghc-options:      -fllvm -threaded -O3
  default-language: Haskell2010

executable aoc2025
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   2025
  build-depends:
    , base
    , cmdargs
    , containers
    , days2025
    , helpers
    , streamly-core  ^>=0.3.0
    , text
    , time

  ghc-options:      -threaded -O3 -fllvm -with-rtsopts=-N8
  default-language: Haskell2010

library days2025
  import:           warnings
  hs-source-dirs:   2025/days
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  build-depends:
    , base
    , bytestring            ^>=0.12.2.0
    , containers            ^>=0.7
    , deepseq               ^>=1.5.1.0
    , hashable              ^>=1.4.7.0
    , helpers
    , psqueues              ^>=0.2.8.1
    , streamly-bytestring   ^>=0.2.3
    , streamly-core         ^>=0.3.0
    , unordered-containers  ^>=0.2.20.1
    , vector                ^>=0.13.2.0
    , vector-algorithms     ^>=0.9.1.0
    , word8                 ^>=0.1.3

  default-language: Haskell2010

-- test-suite tests2015
--   type:             exitcode-stdio-1.0
--   main-is:          Tests.hs
--   hs-source-dirs:   test/2015
--   build-depends:
--     , base
--     , days2015
--     , tasty
--     , tasty-hunit
--     , utf8-string
-- 
--   default-language: Haskell2010

test-suite tests2016
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2016

  -- other-modules: Helpers.Parsers, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9
  --               , Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17
  --              , Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25
  build-depends:
    , array
    , base
    , base16-bytestring
    , containers
    , cryptohash-md5
    , days2016
    , directory
    , fgl
    , graphviz
    , hashable
    , helpers
    , HUnit
    , linear
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , psqueues
    , semialign
    , split
    , text
    , text-show
    , unordered-containers
    , vector

  default-language: Haskell2010

test-suite tests2023
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2023
  build-depends:
    , array
    , base
    , bytestring
    , days2023
    , helpers
    , linear
    , tasty
    , tasty-hunit
    , utf8-string

  default-language: Haskell2010

test-suite tests2024
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2024
  build-depends:
    , arithmoi
    , array
    , base
    , containers
    , days2024
    , fgl
    , graphviz
    , hashable
    , helpers
    , HUnit
    , linear
    , megaparsec
    , mono-traversable
    , mtl
    , multiset
    , parallel
    , psqueues
    , semialign
    , split
    , statistics
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -O1 -rtsopts -with-rtsopts=-N

test-suite tests2025
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test/2025
  build-depends:
    , base
    , containers
    , days2025
    , helpers
    , HUnit
    , streamly-bytestring   ^>=0.2.3
    , streamly-core         ^>=0.3.0
    , text
    , unordered-containers

  default-language: Haskell2010

benchmark bench
  import:           warnings
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/general
  build-depends:
    , base
    , bytestring
    , days2025
    , directory
    , helpers
    , massiv
    , megaparsec
    , mtl
    , streamly-core         ^>=0.3.0
    , tasty-bench
    , text                  >=2.1
    , unordered-containers  ^>=0.2.20.1
    , utf8-string
    , vector                ^>=0.13.2.0
    , word8                 ^>=0.1.3

  ghc-options:
    -fllvm -threaded -O3 -rtsopts -funbox-strict-fields
    "-with-rtsopts=-N8 -T"

  default-language: Haskell2010

benchmark full-year
  import:           warnings
  main-is:          FullYear.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/fullyear
  build-depends:
    , base
    , bytestring
    , days2025
    , directory
    , helpers
    , tasty-bench
    , utf8-string

  ghc-options:      -fllvm -threaded -O3 -rtsopts "-with-rtsopts=-N8 -T"
  default-language: Haskell2010
